apps/base/azure-openai-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-openai-proxy
  labels:
    name: azure-openai-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-openai-proxy
  template:
    metadata:
      labels:
        app: azure-openai-proxy
    spec:
      containers:
      - image: stulzq/azure-openai-proxy
        imagePullPolicy: IfNotPresent
        name: azure-openai-proxy
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8080
      restartPolicy: Always
