apps/base/azure-openai-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: azure-openai-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: openai.example.com
    http:
      paths:
      - backend:
          service: 
            name: azure-openai-proxy
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - openapi.example.com
    secretName: azure-openai-proxy-tls
